<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/testingLoginLayout"
    android:background="@color/EkirjastoLightGrey"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/testingLogo"
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:gravity="center_horizontal"
        android:src="@drawable/ekirjasto_logo"
        android:contentDescription="@string/testingLogoDescription"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/testingHeader"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:text="@string/testingHeader"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/testingUsernameInputTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="24dp"
        android:gravity="center_horizontal"
        android:text="@string/testingUsernameInputTitle"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/testingHeader" />

    <EditText
        android:id="@+id/testingUsernameInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="0dp"
        android:gravity="center_horizontal"
        android:hint="@string/testingUsernameInputHint"
        android:imeOptions="actionDone"
        android:inputType="textVisiblePassword|textNoSuggestions"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/testingUsernameInputTitle" />

    <TextView
        android:id="@+id/testingPinInputTitle"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="36dp"
        android:gravity="center_horizontal"
        android:text="@string/testingPinInputTitle"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/testingUsernameInput" />

    <EditText
        android:id="@+id/testingPinInput"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="50dp"
        android:layout_marginStart="50dp"
        android:layout_marginTop="0dp"
        android:gravity="center_horizontal"
        android:hint="@string/testingPinInputHint"
        android:imeOptions="actionDone"
        android:inputType="numberPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/testingPinInputTitle" />

    <TextView
        android:id="@+id/testingLoginIncorrect"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:gravity="center_horizontal"
        android:textColor="@color/design_default_color_error"
        android:text="@string/testingLoginIncorrect"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/testingPinInput" />

    <Button
        android:id="@+id/testingLoginButton"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="16dp"
        android:text="@string/testingLoginButton"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/testingLoginIncorrect" />

    <Button
        android:id="@+id/testingClearAppDataButton"
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="36dp"
        android:text="@string/testingClearAppDataButton"
        android:backgroundTint="@color/design_default_color_error"
        android:textColor="@color/EkirjastoWhite"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/testingLoginButton" />

</androidx.constraintlayout.widget.ConstraintLayout>
